# Melon

./: .gitignore  BUILD.bazel  CHANGELOG  CHANGES  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  WORKSPACE  a.sh  build.bat  config_modules.sh  configure  configure.pl  install  xmake.lua
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
conf/: melon.conf  melon.conf.msvc.template  melon.conf.template
doc/: Melon Developer Guide.txt
docs/: CNAME  Melon Developer Guide.txt  aes.md  base64.md  bignum.md  conf.md  core_init.md  cron.md  des.md  double_linked_list.md  event.md  fheap.md  file.md  hash.md  http.md  index.md  install.md  ipc.md  json.md  lex.md  matrix.md  md5.md  melang-dev.md  melang.md  mpool.md  multiprocess.md  multithread.md  parser_generator.md  queue.md  quickstart.md  rbtree.md  rc4.md  reedsolomon.md  regex.md  rsa.md  sha.md  spinlock.md  stack.md  string.md  tcp_io.md  (+2 more)
include/: mln_aes.h  mln_alloc.h  mln_array.h  mln_asn1.h  mln_base64.h  mln_bignum.h  mln_chain.h  mln_class.h  mln_conf.h  mln_connection.h  mln_core.h  mln_cron.h  mln_defs.h  mln_des.h  mln_error.h  mln_event.h  mln_expr.h  mln_fec.h  mln_fheap.h  mln_file.h  mln_fork.h  mln_framework.h  mln_func.h  mln_gc.h  mln_global.h  mln_hash.h  mln_http.h  mln_http_header.h  mln_iothread.h  mln_ipc.h  mln_json.h  mln_lang.h  mln_lang_array.h  mln_lang_ast.h  mln_lang_bool.h  mln_lang_func.h  mln_lang_int.h  mln_lang_nil.h  mln_lang_obj.h  mln_lang_real.h  (+31 more)
ipc_handlers/: conf_reload.M_IPC_CONF_RELOAD  distri_init.M_IPC_DISTRIBUTE_INIT  test.M_IPC_1
modules/: README
src/: mln_aes.c  mln_alloc.c  mln_array.c  mln_asn1.c  mln_base64.c  mln_bignum.c  mln_chain.c  mln_class.c  mln_conf.c  mln_connection.c  mln_core.c  mln_cron.c  mln_defs.c  mln_des.c  mln_error.c  mln_event.c  mln_expr.c  mln_fec.c  mln_fheap.c  mln_file.c  mln_fork.c  mln_framework.c  mln_func.c  mln_gc.c  mln_global.c  mln_hash.c  mln_http.c  mln_http_header.c  mln_iothread.c  mln_ipc.c  mln_json.c  mln_lang.c  mln_lang_array.c  mln_lang_ast.c  mln_lang_bool.c  mln_lang_func.c  mln_lang_int.c  mln_lang_nil.c  mln_lang_obj.c  mln_lang_real.c  (+31 more)
t/: aes.c  alloc.c  array.c  asn1.c  base64.c  bignum.c  chain.c  des.c  (+41 more)
(+242 files in other folders)
